--- a/src/app/features/base/components/header/header.component.html
+++ b/src/app/features/base/components/header/header.component.html
@@ -20,8 +20,8 @@
         <div class="dropdown profile">
           <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             <span>
-              <img [src]="getUserImage()" class="rounded-circle">
-              {{user.name}}
+              <img [src]="getUserImage()" class="rounded-circle" [alt]="user?.name?.substring(0, 1)+'W'">
+              <!-- {{user?.name?.substring(0, 1)?.toUppercase() | uppercase}} -->
             </span>
           </button>
           <ul class="dropdown-menu">
