VQ-93 Added Unit Tests for Staff Listing and New Staff Component

--- a/src/app/features/entities/components/staff/assign-apps/assign-apps.component.html
+++ b/src/app/features/entities/components/staff/assign-apps/assign-apps.component.html
@@ -7,7 +7,7 @@
       <div class="row">
         <div class="col-3">
           <input type="text" class="rounded-1 form-control fst-normal fw-normal fs-6 text-dark"
-                 [disabled]="true" [value]="this.staffService.newlyCreatedStaff().username" readonly>
+                 [disabled]="true" [value]="newlyCreatedStaff?.username" readonly>
         </div>
       </div>
 
