--- a/src/app/features/entities/components/staff/list-staff/list-staff.component.html
+++ b/src/app/features/entities/components/staff/list-staff/list-staff.component.html
@@ -12,7 +12,7 @@
 
   <!-- Top Buttons !-->
   <div class="d-flex my-4">
-    <button type="button" class="btn btn-primary rounded-1 px-3 me-3" (click)="gotoEntityPage()">New {{activeTab() === 'Individual' ? 'Staff' : 'Group'}}</button>
+    <button type="button" class="btn btn-primary rounded-1 px-3 me-3" (click)="gotoEntityPage()">New {{activeTab2 === 'Individual' ? 'Staff' : 'Group'}}</button>
     <button type="button" class="btn btn-outline-primary px-4 me-3">Import Users</button>
     <button type="button" class="btn filter-btn rounded-1 px-4 me-3"> <i class="fa fa-filter pe-2"></i>Filter</button>
   </div>
@@ -23,7 +23,7 @@
       <ul class="nav nav-underline" id="nav-tab" role="tablist">
        <li class="nav-item" *ngFor=" let element of elements">
         <a class="nav-link"
-           [ngClass]="{'active':activeTab()===element.activeTab, 'aria-selected':activeTab()==element.activeTab}"
+           [ngClass]="{'active':activeTab2===element.activeTab, 'aria-selected':activeTab2==element.activeTab}"
            (click)="selectTab(element.activeTab)"
            data-toggle="tab" role="tab" data-target="#{{element.subElements.ariaControlId}}" target="_self"
            id="{{element.subElements.tabLinkId}}">
@@ -34,7 +34,7 @@
     </nav>
     <div class="tab-content" id="nav-tabContent">
       <div class="tab-pane fade" id="nav-ind" role="tabpanel" aria-labelledby="nav-ind-tab"
-           [ngClass]="{ 'active':activeTab()==='Individual', 'show':activeTab()==='Individual'}" style="position: relative;">
+           [ngClass]="{ 'active':activeTab2==='Individual', 'show':activeTab2==='Individual'}" style="position: relative;">
         <!-- Dynamic Table -->
         <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
 
@@ -44,7 +44,7 @@
         </app-dynamic-table>
       </div>
       <div class="tab-pane fade" id="nav-group" role="tabpanel" aria-labelledby="nav-group-tab"
-           [ngClass]="{ 'active':activeTab()==='Group', 'show':activeTab()=='Group'}" style="position: relative;">
+           [ngClass]="{ 'active':activeTab2==='Group', 'show':activeTab2=='Group'}" style="position: relative;">
         <!-- Dynamic Table -->
         <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
         <app-dynamic-table
